<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".ui.about.AboutFragment">


    <include
        android:id="@+id/about_toolbar"
        layout="@layout/toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/developer"
        style="@style/ItemCardview"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:fontFamily="@font/googlesansbold"
                android:text="Developer"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/googlesansregular"
                android:text="@string/developer_info"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12ssp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnToDataSource"
        style="@style/ItemCardview"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:fontFamily="@font/googlesansbold"
                android:text="Covid-19 Data"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/googlesansregular"
                android:text="@string/about_covid_data_copyright"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/btnToWhoWeb"
        style="@style/ItemCardview"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:fontFamily="@font/googlesansbold"
                android:text="WHO Infographics and Q&amp;A"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/googlesansregular"
                android:text="@string/about_information_copyright"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>