<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="indonesia"
            type="com.fahmisbas.covid19id.data.model.IndonesiaData" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/toolbarTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:fontFamily="@font/googlesansbold"
                        android:gravity="center_horizontal"
                        android:text="@string/app_name"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:src="@drawable/ic_idnflag" />
                </LinearLayout>


            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_20sdp"
                        android:orientation="vertical">


                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardBackgroundColor="@color/davy_grey"
                            app:cardCornerRadius="@dimen/_5sdp">

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ProgressBar
                                    android:id="@+id/progress"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:visibility="visible" />

                                <GridLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:layout_margin="@dimen/_15sdp"
                                    android:columnCount="2"
                                    android:rowCount="2"
                                    android:useDefaultMargins="true">

                                    <LinearLayout
                                        android:layout_rowWeight="1"
                                        android:layout_columnWeight="1"
                                        android:layout_gravity="fill"
                                        android:orientation="vertical">

                                        <TextView
                                            android:id="@+id/titleTotalCase"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:fontFamily="@font/googlesansbold"
                                            android:gravity="center_horizontal"
                                            android:text="@string/total_case"
                                            android:textColor="@android:color/white"
                                            android:textSize="@dimen/_14ssp" />

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:fontFamily="@font/googlesansregular"
                                            android:gravity="center_horizontal"
                                            android:text="@{indonesia.caseNumber}"
                                            android:textColor="@android:color/white"
                                            android:textSize="@dimen/_14sdp" />

                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_rowWeight="1"
                                        android:layout_columnWeight="1"
                                        android:layout_gravity="fill"
                                        android:orientation="vertical">

                                        <TextView
                                            android:id="@+id/titlePositive"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:fontFamily="@font/googlesansbold"
                                            android:gravity="center_horizontal"
                                            android:text="@string/positif"
                                            android:textColor="@android:color/white"
                                            android:textSize="@dimen/_14ssp" />

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:fontFamily="@font/googlesansregular"
                                            android:gravity="center_horizontal"
                                            android:text="@{indonesia.positive}"
                                            android:textColor="@color/color_confirmed"
                                            android:textSize="@dimen/_14ssp" />

                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_rowWeight="1"
                                        android:layout_columnWeight="1"
                                        android:layout_gravity="fill"
                                        android:orientation="vertical">

                                        <TextView
                                            android:id="@+id/titleRecovered"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:fontFamily="@font/googlesansbold"
                                            android:gravity="center_horizontal"
                                            android:text="@string/sembuh"
                                            android:textColor="@android:color/white"
                                            android:textSize="@dimen/_14ssp" />

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:fontFamily="@font/googlesansregular"
                                            android:gravity="center_horizontal"
                                            android:text="@{indonesia.recovered}"
                                            android:textColor="@color/color_recovered"
                                            android:textSize="@dimen/_14ssp" />

                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_rowWeight="1"
                                        android:layout_columnWeight="1"
                                        android:layout_gravity="fill"
                                        android:orientation="vertical">

                                        <TextView
                                            android:id="@+id/titleDeath"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:fontFamily="@font/googlesansbold"
                                            android:gravity="center_horizontal"
                                            android:text="@string/meninggal"
                                            android:textColor="@android:color/white"
                                            android:textSize="@dimen/_14ssp" />

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:fontFamily="@font/googlesansregular"
                                            android:gravity="center_horizontal"
                                            android:text="@{indonesia.death}"
                                            android:textColor="@color/color_death"
                                            android:textSize="@dimen/_14ssp" />
                                    </LinearLayout>
                                </GridLayout>
                            </FrameLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/mapCardView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:clickable="true"
                            android:focusable="true"
                            android:orientation="vertical"
                            app:cardBackgroundColor="@color/davy_grey"
                            app:cardCornerRadius="@dimen/_5sdp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/_100sdp"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/img_indonesia" />

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/_10sdp"
                                    android:background="@color/davy_grey">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/googlesansregular"
                                        android:text="@string/map"
                                        android:textColor="@android:color/white"
                                        android:textSize="@dimen/_13ssp" />

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentEnd="true"
                                        android:layout_centerVertical="true"
                                        android:src="@drawable/ic_map" />

                                </RelativeLayout>
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/qandaCardView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:clickable="true"
                            android:focusable="true"
                            app:cardBackgroundColor="@color/davy_grey"
                            app:cardCornerRadius="@dimen/_5sdp">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="@dimen/_10sdp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentStart="true"
                                    android:layout_centerVertical="true"
                                    android:fontFamily="@font/googlesansregular"
                                    android:text="@string/pertanyaan_amp_jawaban_terkait_ncoronavirus"
                                    android:textColor="@android:color/white"
                                    android:textSize="@dimen/_13ssp" />

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentEnd="true"
                                    android:layout_centerVertical="true"
                                    android:src="@drawable/ic_arrow_forward" />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/infographicCardView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:clickable="true"
                            android:focusable="true"
                            app:cardBackgroundColor="@color/davy_grey"
                            app:cardCornerRadius="@dimen/_5sdp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/_100sdp"
                                    android:src="@drawable/infographics_min"
                                    android:scaleType="centerCrop" />

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/_10sdp"
                                    android:background="@color/davy_grey">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/googlesansregular"
                                        android:text="@string/infographics"
                                        android:textColor="@android:color/white"
                                        android:textSize="@dimen/_13ssp" />

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentEnd="true"
                                        android:layout_centerVertical="true"
                                        android:src="@drawable/ic_arrow_forward" />
                                </RelativeLayout>
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>
</layout>
